ajout cheat sheet pyspark for data science

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 								<li><a href="pdf/python/Python_Importing_Data_Cheat_Sheet.pdf">Import Data</a></li>
 								<li><a href="pdf/python/Python_Jupyter_Notebook_Cheat_Sheet.pdf">Jupyter Notebook</a></li>
 								<li><a href="pdf/python/Python_Matplotlib_Cheat_Sheet.pdf">Matplotlib</a></li>
-								<li><a href="pdf/python/Python_PySpark_SQL_Basics.pdf">PySpark</a></li>
+								<li><a href="pdf/python/Python_PySpark_SQL_Basics.pdf">PySpark Basics</a></li>
+								<li><a href="pdf/python/Python_PySpark_for_data_science.pdf">PySpark for data science</a></li>
 								<li><a href="pdf/python/Python_Seaborn_Cheat_Sheet.pdf">Seaborn</a></li>
 								<li><a href="pdf/python/Python_Spacy_Cheat_Sheet.pdf">Spacy</a></li>
 								<li><a href="pdf/python/Scikit_Learn_Cheat_Sheet_Python.pdf">Scikit</a></li>
@@ -107,6 +108,9 @@
 										</div>
 										<div class="carousel-item peopleCarouselImg" data-interval="3000">
 											<a href="pdf/python/Python_PySpark_SQL_Basics.pdf"> <img src="images/pyspark.png" alt="Carrousel slide 2" class="d-block w-100"></a>
+										</div>
+										<div class="carousel-item peopleCarouselImg" data-interval="3000">
+											<a href="pdf/python/Python_PySpark_for_data_science.pdf"> <img src="images/pyspark.png" alt="Carrousel slide 2" class="d-block w-100"></a>
 										</div>
 										<div class="carousel-item peopleCarouselImg" data-interval="3000">
 											<a href="pdf/python/Python_Seaborn_Cheat_Sheet.pdf"> <img src="images/seaborn.png" alt="Carrousel slide 2" class="d-block w-100"></a>
