ajout cheat sheet R DT

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 								<li><a href="pdf/r/data_import.pdf">Import data</a></li>
 								<li><a href="pdf/r/data_wrangling_french.pdf">Wrangling data</a></li>
 								<li><a href="pdf/r/ggplot2_french_cheatsheet.pdf">ggplot2 package</a></li>
+								<li><a href="pdf/r/DT_data_table_cheat_sheet.pdf">DT : Data Table package</a></li>
 							</ul></p>
 
 							<div class="container">
@@ -170,6 +171,10 @@
 										</div>
 										<div class="carousel-item peopleCarouselImg" data-interval="3000">
 											<a href="pdf/r/ggplot2_french_cheatsheet.pdf"> <img src="images/ggplot2.png" alt="Carrousel slide 4" class="d-block w-100"></a>
+											<div><h5>Plot avec ggplot2</h5></div>
+										</div>
+										<div class="carousel-item peopleCarouselImg" data-interval="3000">
+											<a href="pdf/r/DT_data_table_cheat_sheet.pdf"> <img src="images/datatable.png" alt="Carrousel slide 5" class="d-block w-100"></a>
 											<div><h5>Plot avec ggplot2</h5></div>
 										</div>
 									</div>
